Simulate background-attachment:fixed on mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -11,28 +11,49 @@
   }
   @keyframes blur-within {
   }
+
   :root {
     --pico-font-family: var(--link-garden-google-font, ''),
       var(--link-garden-theme-font, ''), system-ui, 'Segoe UI', Roboto, Oxygen,
       Ubuntu, Cantarell, Helvetica, Arial, 'Helvetica Neue', sans-serif,
       var(--pico-font-family-emoji);
+
+    @media (prefers-color-scheme: light) {
+      background-color: var(--link-garden-bg-color-light);
+    }
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--link-garden-bg-color-dark);
+    }
   }
 
   body {
+    padding: calc(var(--pico-block-spacing-vertical) + env(safe-area-inset-top))
+      env(safe-area-inset-right) env(safe-area-inset-bottom)
+      env(safe-area-inset-left);
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding-block: var(--pico-block-spacing-vertical);
 
-    @media (prefers-color-scheme: light) {
-      background-color: var(--link-garden-bg-color-light);
-      background-image: var(--link-garden-bg-image-light);
-    }
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--link-garden-bg-color-dark);
-      background-image: var(--link-garden-bg-image-dark);
+    // pseudo-element because background-attachment: fixed is broken on mobile
+    &::before {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      content: '';
+
+      @media (prefers-color-scheme: light) {
+        background-image: var(--link-garden-bg-image-light);
+      }
+      @media (prefers-color-scheme: dark) {
+        background-image: var(--link-garden-bg-image-dark);
+      }
     }
   }
 
